crates/functions/src/tests/aggregate/snapshots/listagg/query_listagg_distinct.snap
---
source: crates/functions/src/tests/aggregate/listagg.rs
description: "\"SELECT LISTAGG(DISTINCT val, ', ') FROM (VALUES ('apple'), ('banana'), ('apple'), ('cherry')) AS t(val)\""
---
Ok(
    [
        "+------------------------------------+",
        "| listagg(DISTINCT t.val,Utf8(\", \")) |",
        "+------------------------------------+",
        "| apple, banana, cherry              |",
        "+------------------------------------+",
    ],
)
