crates/functions/src/tests/aggregate/snapshots/listagg/query_listagg_distinct_with_order.snap
---
source: crates/functions/src/tests/aggregate/listagg.rs
assertion_line: 57
description: "\"SELECT LISTAGG(DISTINCT name, ', ') WITHIN GROUP (ORDER BY name) FROM (VALUES ('cherry'), ('apple'), ('banana'), ('apple')) AS t(name)\""
---
Ok(
    [
        "+--------------------------------------------------------------------------+",
        "| listagg(DISTINCT t.name,Utf8(\", \")) WITHIN GROUP [t.name ASC NULLS LAST] |",
        "+--------------------------------------------------------------------------+",
        "| apple, banana, cherry                                                    |",
        "+--------------------------------------------------------------------------+",
    ],
)
