crates/functions/src/tests/aggregate/snapshots/listagg/query_listagg_empty_input.snap
---
source: crates/functions/src/tests/aggregate/listagg.rs
description: "\"SELECT LISTAGG(val, ', ') FROM (SELECT * FROM (VALUES ('a')) AS t(val) WHERE val = 'nonexistent')\""
---
Ok(
    [
        "+---------------------------+",
        "| listagg(t.val,Utf8(\", \")) |",
        "+---------------------------+",
        "|                           |",
        "+---------------------------+",
    ],
)
