crates/functions/src/tests/aggregate/snapshots/listagg/query_listagg_group_by_with_within_group.snap
---
source: crates/functions/src/tests/aggregate/listagg.rs
assertion_line: 120
description: "\"SELECT category, LISTAGG(name, ', ') WITHIN GROUP (ORDER BY price DESC) AS expensive_first FROM grocery_items GROUP BY category ORDER BY category\""
info: "Setup queries: CREATE TABLE grocery_items AS SELECT * FROM (VALUES ('fruit', 'apple', 1.20), ('fruit', 'banana', 0.80), ('fruit', 'cherry', 3.50), ('vegetable', 'carrot', 0.90), ('vegetable', 'broccoli', 2.10)) AS t(category, name, price)"
---
Ok(
    [
        "+-----------+-----------------------+",
        "| category  | expensive_first       |",
        "+-----------+-----------------------+",
        "| fruit     | cherry, apple, banana |",
        "| vegetable | broccoli, carrot      |",
        "+-----------+-----------------------+",
    ],
)
