crates/functions/src/tests/aggregate/snapshots/listagg/query_listagg_grouped.snap
---
source: crates/functions/src/tests/aggregate/listagg.rs
description: "\"SELECT category, LISTAGG(name, ' | ') FROM (VALUES ('fruit', 'apple'), ('fruit', 'banana'), ('vegetable', 'carrot'), ('vegetable', 'broccoli')) AS t(category, name) GROUP BY category ORDER BY category\""
---
Ok(
    [
        "+-----------+-----------------------------+",
        "| category  | listagg(t.name,Utf8(\" | \")) |",
        "+-----------+-----------------------------+",
        "| fruit     | apple | banana              |",
        "| vegetable | carrot | broccoli           |",
        "+-----------+-----------------------------+",
    ],
)
