crates/functions/src/tests/aggregate/snapshots/listagg/query_listagg_numbers_as_strings.snap
---
source: crates/functions/src/tests/aggregate/listagg.rs
description: "\"SELECT LISTAGG(num, ' + ') FROM number_sequence\""
info: "Setup queries: CREATE TABLE number_sequence AS SELECT * FROM (VALUES (1), (2), (3), (4)) AS t(num)"
---
Ok(
    [
        "+------------------------------------------+",
        "| listagg(number_sequence.num,Utf8(\" + \")) |",
        "+------------------------------------------+",
        "| 1 + 2 + 3 + 4                            |",
        "+------------------------------------------+",
    ],
)
