crates/functions/src/tests/aggregate/snapshots/listagg/query_listagg_pipe_delimiter.snap
---
source: crates/functions/src/tests/aggregate/listagg.rs
description: "\"SELECT LISTAGG(val, '|') FROM test_chars\""
info: "Setup queries: CREATE TABLE test_chars AS SELECT * FROM (VALUES ('a'), ('b'), ('c')) AS t(val)"
---
Ok(
    [
        "+-----------------------------------+",
        "| listagg(test_chars.val,Utf8(\"|\")) |",
        "+-----------------------------------+",
        "| a|b|c                             |",
        "+-----------------------------------+",
    ],
)
